--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <link rel="favorite icon" type="image/svg" href="assets/images/icons/fav-logo.svg">
 
         <link rel="stylesheet" href="assets/css/library.css">
-        <link rel="stylesheet" href="assets/css/main.css">
-        <!-- <link rel="stylesheet" href="assets/css/main.min.css"> -->
+        <link rel="stylesheet" href="assets/css/main.min.css">
     </head>
 
     <body class="p-relative overflow-hidden editor">
@@ -229,7 +228,7 @@
                 </div>
             </section>
 
-            <div class="copy"><p class="text-align-center color-light">© 2023 All rights reserved - Developed by <a href="http://" target="_blank">Isabel Alves</a></p></div>
+            <div class="copy"><p class="text-align-center color-light">© 2023 All rights reserved - Developed by <a href="https://github.com/isalves02/Portfolio" target="_blank">Isabel Alves</a></p></div>
 
         </footer>
 
