--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 </h1>    
 
                 <ul class="menu-list flex">
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#code">Projects</a></li>
                     <li><a href="#tools">Tools</a></li>
                     <li><a href="#about">About me</a></li>
                     <li><a href="https://drive.google.com/file/d/16FFqc8YyImLeOsOsAFm5uU2wNDp9e2Gl/view" target="_blank">Resume</a></li>
                     <li><a href="mailto:isabel_alves02@hotmail.com">Contact</a></li>
                 </ul>
 
-                <div class="menu-toggle"><i></i><i></i><i></i></div>
+                <div class="menu-toggle"><span class="for-s-reader">CLick to open menu</span><i></i><i></i><i></i></div>
             </div>
         </nav>
 
@@ -271,16 +271,7 @@
                 <div class="content p-relative overflow-hidden">
                     <h2 class="animate__slide-right animate__delay-2">Front-end developer <span class="color-yellow">&</span><br> student enthusiast<span class="color-yellow">.</span></h2>
                     <p class="animate__slide-right animate__delay-3">
-                        I started to programming in automation subject 
-                        at school because our team worked with arduino. At the beggining of the pandemic 
-                        I was finishing high school and decided to learn HTML, 
-                        CSS and JS by myself, using online courses like RocketSeat  
-                        and others free education platforms. During this period and intended to improve  
-                        my knowledge, I felt the necessity to learn more about UX/UI to 
-                        developer freelance works. After almost two years, in nov/2021, I get into  
-                        my first fixed job which I started to learn PHP, WordPress, MySQL, Angular, TypeScript and Git. In aug/2022 I could 
-                        enroll in a technical course in Systems Development that I intend 
-                        to later pursue a degree in Software Engineering.</p>
+                       I started to programming in the automation discipline at school because we worked with arduino. At the beginning of the pandemic, I was finishing high school and decided to learn HTML, CSS and JS by myself, using online courses like RocketSeat and other free teaching platforms. During this period and with the focus on improving my knowledge, I felt the need to learn more about User Interface Design to enter the job market as a freelancer. After almost two years, in Nov/2021, I got my first steady job where I learned PHP, WordPress, MySQL, Angular, TypeScript and Git. In Aug/2022 I was able to enroll in a technical course in Systems Development, which will end in Dec/2023 and I intend to later move on to Software Engineering.</p>
                 </div>
             </div>
         </section>
